[gd_scene load_steps=9 format=2]

[ext_resource path="res://dialogue.gd" type="Script" id=1]
[ext_resource path="res://DotGothic16-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://BattleSystem.gd" type="Script" id=3]
[ext_resource path="res://DotGothic_DynamicFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://clock.gd" type="Script" id=5]
[ext_resource path="res://DotGothic_DynamicFont_Small.tres" type="DynamicFont" id=6]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[node name="BattleSystem" type="Control"]
margin_right = 510.0
margin_bottom = 300.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundShade" type="ColorRect" parent="."]
margin_left = -600.0
margin_top = -400.0
margin_right = 600.0
margin_bottom = 400.0
color = Color( 0, 0, 0, 0.741176 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -1.41422, 1.41422 )
current = true

[node name="AnimatedEnemy" type="AnimatedSprite" parent="."]
position = Vector2( 400, 0 )

[node name="AnimatedPlayer" type="AnimatedSprite" parent="."]
position = Vector2( -400, 0 )

[node name="Player" type="Sprite" parent="."]
position = Vector2( -400, 0 )

[node name="Enemy" type="Sprite" parent="."]
position = Vector2( 400, 0 )

[node name="DialogueSystem" type="Control" parent="."]
margin_top = 190.0
margin_bottom = 190.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false,
"_edit_vertical_guides_": [  ]
}

[node name="Chat" type="Control" parent="DialogueSystem"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatBox" type="ColorRect" parent="DialogueSystem/Chat"]
margin_left = -502.0
margin_top = -102.0
margin_right = 502.0
margin_bottom = 102.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChatBackground" type="ColorRect" parent="DialogueSystem/Chat"]
margin_left = -500.0
margin_top = -100.0
margin_right = 500.0
margin_bottom = 100.0
color = Color( 0.0156863, 0.0117647, 0.188235, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="DialogueSystem/Chat"]
margin_left = -480.0
margin_top = -70.0
margin_right = 480.0
margin_bottom = 100.0
custom_fonts/mono_font = SubResource( 1 )
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerLabel" type="Control" parent="DialogueSystem"]
margin_left = -500.0
margin_top = -100.0
margin_right = -500.0
margin_bottom = -100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelBg" type="ColorRect" parent="DialogueSystem/PlayerLabel"]
margin_right = 200.0
margin_bottom = 25.0
color = Color( 0, 0, 0, 0.392157 )

[node name="Text" type="RichTextLabel" parent="DialogueSystem/PlayerLabel"]
margin_left = 20.0
margin_right = 180.0
margin_bottom = 30.0
custom_fonts/normal_font = ExtResource( 6 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyLabel" type="Control" parent="DialogueSystem"]
margin_left = 500.0
margin_top = -100.0
margin_right = 500.0
margin_bottom = -100.0

[node name="LabelBg" type="ColorRect" parent="DialogueSystem/EnemyLabel"]
margin_left = -200.0
margin_bottom = 25.0
color = Color( 0, 0, 0, 0.4 )

[node name="Text" type="RichTextLabel" parent="DialogueSystem/EnemyLabel"]
margin_left = -180.0
margin_right = -20.0
margin_bottom = 30.0
custom_fonts/normal_font = ExtResource( 6 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="FloatingDialogue" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="FloatingDialogue"]
margin_left = -300.0
margin_top = -50.0
margin_right = 300.0
margin_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/mono_font = ExtResource( 4 )
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clock" type="Control" parent="."]
margin_left = -500.0
margin_right = -500.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeBar" type="ColorRect" parent="Clock"]
margin_top = 65.0
margin_right = 1000.0
margin_bottom = 85.0
color = Color( 1, 1, 1, 0.560784 )
__meta__ = {
"_edit_use_anchors_": false
}
